--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.0",
     "@types/reselect": "^2.2.0",
     "axios": "^0.20.0",
@@ -18,7 +19,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
-    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
