--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
+    "react-dropzone": "^11.2.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -29,7 +30,7 @@
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "typescript": "~3.7.2"
+    "typescript": "3.8"
   },
   "scripts": {
     "start": "react-scripts start",
