--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-datepicker": "^3.1.1",
     "@types/react-dom": "^16.9.0",
+    "@types/react-toastify": "^4.1.0",
     "@types/reselect": "^2.2.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
@@ -25,9 +26,10 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.0.9",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-form": "^8.3.6",
+    "redux-form": "8.2.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "3.8"
