--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.0",
+    "react-i18n": "^1.0.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
