--- a/package.json
+++ b/package.json
@@ -3,27 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-datepicker": "^3.1.1",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-toastify": "^4.1.0",
-    "@types/reselect": "^2.2.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
+    "i18next": "^19.8.3",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.0",
-    "react-i18n": "^1.0.1",
+    "react-i18next": "^11.7.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
@@ -57,9 +47,20 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-datepicker": "^3.1.1",
+    "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-toastify": "^4.1.0",
     "@types/redux": "^3.6.0",
-    "@types/redux-form": "^8.3.0"
+    "@types/redux-form": "^8.3.0",
+    "@types/reselect": "^2.2.0"
   }
 }
