--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-bootstrap-typeahead": "^3.4.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
@@ -10,6 +11,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-typeahead": "^5.1.2",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
     "react-dropzone": "^11.2.0",
