--- a/package.json
+++ b/package.json
@@ -1,68 +1,74 @@
 {
-  "name": "trackteacher",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@types/react-bootstrap-typeahead": "^3.4.6",
-    "axios": "^0.20.0",
-    "bootstrap": "^4.5.3",
-    "classnames": "^2.2.6",
-    "i18next": "^19.8.3",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.3.0",
-    "react-bootstrap-typeahead": "^5.1.2",
-    "react-datepicker": "^3.3.0",
-    "react-dom": "^16.14.0",
-    "react-dropzone": "^11.2.0",
-    "react-i18next": "^11.7.3",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-toastify": "^6.0.9",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-form": "8.2.5",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "typescript": "3.8"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-datepicker": "^3.1.1",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-toastify": "^4.1.0",
-    "@types/redux": "^3.6.0",
-    "@types/redux-form": "^8.3.0",
-    "@types/reselect": "^2.2.0"
-  }
+	"name": "trackteacher",
+	"version": "0.1.0",
+	"private": true,
+	"homepage": "https://htmlprogrammer2001.github.io/trackTeacherFront",
+	"dependencies": {
+		"@types/react-bootstrap-typeahead": "^3.4.6",
+		"axios": "^0.20.0",
+		"bootstrap": "^4.5.3",
+		"classnames": "^2.2.6",
+		"dotenv": "^8.2.0",
+		"dotenv-cli": "^4.0.0",
+		"i18next": "^19.8.3",
+		"node-sass": "^4.14.1",
+		"react": "^16.14.0",
+		"react-bootstrap": "^1.3.0",
+		"react-bootstrap-typeahead": "^5.1.2",
+		"react-datepicker": "^3.3.0",
+		"react-dom": "^16.14.0",
+		"react-dropzone": "^11.2.0",
+		"react-i18next": "^11.7.3",
+		"react-redux": "^7.2.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.3",
+		"react-toastify": "^6.0.9",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
+		"redux-form": "8.2.5",
+		"redux-thunk": "^2.3.0",
+		"reselect": "^4.0.0",
+		"typescript": "3.8"
+	},
+	"scripts": {
+		"start": "dotenv -e .env.development react-scripts start",
+		"build": "dotenv -e .env.development react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "yarn run build",
+		"deploy": "gh-pages -d build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"@types/axios": "^0.14.0",
+		"@types/jest": "^24.0.0",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.0",
+		"@types/react-datepicker": "^3.1.1",
+		"@types/react-dom": "^16.9.0",
+		"@types/react-redux": "^7.1.9",
+		"@types/react-router-dom": "^5.1.6",
+		"@types/react-toastify": "^4.1.0",
+		"@types/redux": "^3.6.0",
+		"@types/redux-form": "^8.3.0",
+		"@types/reselect": "^2.2.0",
+		"gh-pages": "^3.1.0"
+	}
 }
