--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	},
 	"scripts": {
 		"start": "dotenv -e .env.development react-scripts start",
-		"build": "dotenv -e .env.development react-scripts build",
+		"build": "dotenv -e .env.production react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"predeploy": "yarn run build",
