--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"dotenv": "^8.2.0",
 		"dotenv-cli": "^4.0.0",
 		"i18next": "^19.8.3",
+		"moment": "^2.29.1",
 		"node-sass": "^4.14.1",
 		"react": "^16.14.0",
 		"react-bootstrap": "^1.3.0",
