--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"dotenv": "^8.2.0",
 		"dotenv-cli": "^4.0.0",
 		"i18next": "^19.8.3",
+		"i18next-browser-languagedetector": "^6.0.1",
+		"i18next-http-backend": "^1.0.21",
 		"moment": "^2.29.1",
 		"node-sass": "^4.14.1",
 		"react": "^16.14.0",
