--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"private": true,
 	"homepage": "https://htmlprogrammer2001.github.io/trackTeacherFront",
 	"dependencies": {
-		"@types/react-bootstrap-typeahead": "^3.4.6",
 		"axios": "^0.20.0",
 		"bootstrap": "^4.5.3",
 		"classnames": "^2.2.6",
+		"connected-react-router": "^6.8.0",
 		"dotenv": "^8.2.0",
 		"dotenv-cli": "^4.0.0",
 		"i18next": "^19.8.3",
@@ -64,6 +64,7 @@
 		"@types/jest": "^24.0.0",
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.0",
+		"@types/react-bootstrap-typeahead": "^3.4.6",
 		"@types/react-datepicker": "^3.1.1",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-redux": "^7.1.9",
