--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"i18next": "^19.8.3",
 		"i18next-browser-languagedetector": "^6.0.1",
 		"i18next-http-backend": "^1.0.21",
+		"js-file-download": "^0.4.12",
 		"moment": "^2.29.1",
 		"node-sass": "^4.14.1",
 		"react": "^16.14.0",
