--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"@types/redux": "^3.6.0",
 		"@types/redux-form": "^8.3.0",
 		"@types/reselect": "^2.2.0",
+		"enzyme": "^3.11.0",
 		"gh-pages": "^3.1.0"
 	}
 }
