--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"@types/axios": "^0.14.0",
+		"@types/enzyme-adapter-react-16": "^1.0.6",
 		"@types/jest": "^24.0.0",
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.0",
@@ -75,6 +76,7 @@
 		"@types/redux-form": "^8.3.0",
 		"@types/reselect": "^2.2.0",
 		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.5",
 		"gh-pages": "^3.1.0"
 	}
 }
