Helpers and validators tests

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
                   CI: ""
               run: |
                 npm install
-                jest
+                npm run ci
 
             - name: Build 🔧 
               env:
