--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
                 CI: ""
               run: |
                 npm install
-                npm run test
+                npm run ci
