--- a/package.json
+++ b/package.json
@@ -76,9 +76,11 @@
 		"@types/react-toastify": "^4.1.0",
 		"@types/redux": "^3.6.0",
 		"@types/redux-form": "^8.3.0",
+		"@types/redux-mock-store": "^1.0.2",
 		"@types/reselect": "^2.2.0",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.5",
-		"gh-pages": "^3.1.0"
+		"gh-pages": "^3.1.0",
+		"redux-mock-store": "^1.5.4"
 	}
 }
